; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_regcontrol.c_set_control_clipping.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/controls/extr_regcontrol.c_set_control_clipping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@LAYOUT_RTL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @set_control_clipping(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = bitcast %struct.TYPE_3__* %5 to i8*
  %9 = bitcast %struct.TYPE_3__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 %9, i64 16, i1 false)
  %10 = call i64 @CreateRectRgn(i32 0, i32 0, i32 0, i32 0)
  store i64 %10, i64* %6, align 8
  %11 = load i32, i32* %3, align 4
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @GetClipRgn(i32 %11, i64 %12)
  %14 = icmp ne i32 %13, 1
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @DeleteObject(i64 %16)
  store i64 0, i64* %6, align 8
  br label %18

18:                                               ; preds = %15, %2
  %19 = load i32, i32* %3, align 4
  %20 = bitcast %struct.TYPE_3__* %5 to i32*
  %21 = call i32 @DPtoLP(i32 %19, i32* %20, i32 2)
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @GetLayout(i32 %22)
  %24 = load i32, i32* @LAYOUT_RTL, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %34

27:                                               ; preds = %18
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %29 = load i32, i32* %28, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %28, align 4
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %31, align 4
  br label %34

34:                                               ; preds = %27, %18
  %35 = load i32, i32* %3, align 4
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %37 = load i32, i32* %36, align 4
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %39 = load i32, i32* %38, align 4
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @IntersectClipRect(i32 %35, i32 %37, i32 %39, i32 %41, i32 %43)
  %45 = load i64, i64* %6, align 8
  ret i64 %45
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @CreateRectRgn(i32, i32, i32, i32) #2

declare dso_local i32 @GetClipRgn(i32, i64) #2

declare dso_local i32 @DeleteObject(i64) #2

declare dso_local i32 @DPtoLP(i32, i32*, i32) #2

declare dso_local i32 @GetLayout(i32) #2

declare dso_local i32 @IntersectClipRect(i32, i32, i32, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
